# Sketchy-Connections

./: .gitignore  BrightnessSlider.py  Button.py  CheckboxButton.py  ChoicesButton.py  ColorButton.py  ColorWheel.py  DefaultUI.py  Engine.py  README.md  SliderButton.py  TimeBar.py  TypeBox.py  build_client.bat  build_client.sh  draw_window.py  main.py  model.py  pyproject.toml  run_client.bat  run_client.sh  run_server.bat  run_server.sh
client/: pyproject.toml
client/assets/: draw_prompts.csv  guess_prompts.csv
client/assets/textures/: desktop_icon.icns
client/sketchy_client/: BrightnessSlider.py  Button.py  CheckboxButton.py  ChoicesButton.py  ColorButton.py  ColorWheel.py  DefaultUI.py  Engine.py  NetworkClient.py  SliderButton.py  TimeBar.py  TypeBox.py  __init__.py  brightness_slider.py  button.py  checkbox_button.py  choices_button.py  color_button.py  color_wheel.py  default_ui.py  draw_window.py  engine.py  main.py  network_client.py  paths.py  pen_type_button.py  slide_down_button.py  slider_button.py  sound_manager.py  time_bar.py  type_box.py
server/: Dockerfile  app.py  pyproject.toml
server/app/: main.py
server/sketchy_server/: __init__.py  model.py  model.py.orig
server/sketchy_server/app/: main.py
shared/: pyproject.toml
shared/sketchy_shared/: __init__.py  types.py
