[project]
name = "sketchy-server"
version = "0.1.0"
description = "Backend API for Sketchy Connections"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "sketchy-shared",
]

[tool.uv.sources]
sketchy-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

